[Bug fix] Corrected spacing bug on compact button.

--- a/artists/style-page-artist.css
+++ b/artists/style-page-artist.css
@@ -158,7 +158,7 @@ session:nth-of-type(1n + 11)::before { content: "♒\00FE0E "; }
 session:nth-of-type(1n + 12)::before { content: "♓\00FE0E "; }
 .lineup__compact {
 	float: right;
-	margin: 0 0 1rem 1rem;
+	margin: 0 0 0.25rem 0.25rem;
 	z-index: 2;
 }
 .lineup--compact:checked ~ .lineup__wrapper .lineup__compact {
